[project]
name = "bias-core"
version = "0.1.1"
description = "Bias forum backend core platform"
requires-python = ">=3.11"

dependencies = [
  "Django>=5.0,<5.1",
  "django-ninja>=1.2,<1.3",
  "django-ninja-jwt>=5.3,<5.4",
  "django-ninja-extra>=0.21,<0.22",
  "channels>=4.0,<4.1",
  "channels-redis>=4.2,<4.3",
  "celery>=5.3,<5.4",
  "redis>=5.0,<5.1",
  "django-redis>=5.4,<5.5",
  "pydantic>=2.6,<2.7",
  "markdown>=3.5,<3.6",
  "bleach>=6.1,<6.2",
  "pymdown-extensions>=10.7,<10.8",
  "python-dateutil>=2.9,<3",
  "django-cors-headers>=4.3,<4.4",
  "django-extensions>=3.2,<3.3",
  "python-dotenv>=1.0,<1.1",
  "jieba>=0.42,<0.43",
  "httpx>=0.27,<0.28",
  "Pillow>=10.2,<11",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9,<3"]
storage = ["boto3>=1.34,<2", "oss2>=2.18,<3"]
dev = [
  "pytest>=8.1,<8.2",
  "pytest-django>=4.8,<4.9",
  "pytest-cov>=4.1,<4.2",
  "import-linter>=2.11,<3",
  "factory-boy>=3.3,<3.4",
  "daphne>=4.1,<4.2",
  "gunicorn>=22.0,<23",
  "uvicorn>=0.30,<0.31",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "tests.py test_*.py *_tests.py"
testpaths = ["tests"]
addopts = "--tb=short -v"
filterwarnings = [
  "ignore::DeprecationWarning:pydantic",
  "ignore::UserWarning:django.test.utils",
]
